# ext-sort

./: .gitignore  Cargo.toml  readme.md
src/: check.rs  generate.rs  main.rs  sort.rs
src/cli/: check.rs  gen.rs  mod.rs  sort.rs
